# speech_server

./: .gitignore  README.md  chatter_test.py  client.py  example_demon.service  kokoro_test.py  ollama_test.py  pyproject.toml  server.py  server_test.py
chatterbox_tts_api/: __init__.py  models.py  server.py  tts_service.py
chatterbox_tts_api/common/: base_tts_service.py
chatterbox_tts_api/server/: app.py  config.py  models.py
chatterbox_tts_api/tts_services/: chatter_box_tts_service.py  kokoro_tts_service.py
docs/source/: index.md
src/: __init__.py
src/server/: app.py
src/tts_services/: chatter_box_tts_service.py
