[tool.poetry]
name = "chatterbox-tts-api"
version = "0.1.0"
description = "FastAPI wrapper for Chatterbox TTS"
authors = ["C. Thomas Brittain"]
readme = "README.md"
packages = [{include = "chatterbox_tts_api", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
rich = "^13.7.0"
python-multipart = "^0.0.6"
aiofiles = "^23.2.0"
httpx = "^0.25.2"
# Chatterbox TTS dependencies
chatterbox-tts = "^0.1.1"
torch = "^2.1.0"
torchaudio = "^2.1.0"
numpy = "^1.24.0"
soundfile = "^0.12.0"
setuptools = "^80.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true